create complaint WORKS

--- a/DariTn/Views/Shared/_Layout.cshtml
+++ b/DariTn/Views/Shared/_Layout.cshtml
@@ -77,6 +77,7 @@
                                 <li> @Html.ActionLink("Rent Advertisements", "Rent", "AssetAdvs")</li>
                                 <li> @Html.ActionLink("Sale Advertisements", "Sale", "AssetAdvs")</li>
                                 <li> @Html.ActionLink("My Advertisements", "MyAdvs", "AssetAdvs")</li>
+                                <li> @Html.ActionLink("My Complaints", "Index", "Complaints")</li>
                             </ul>
                         </div>
                     </li>
