--- a/DariTn/Views/AssetAdvs/Index.cshtml
+++ b/DariTn/Views/AssetAdvs/Index.cshtml
@@ -145,29 +145,26 @@
                             {
                                 <img class="img-responsive" src="~/img/selling-img/office.jpg">
                             }
-                            <div class="sub-box-content">
-                                <h5>@Html.DisplayFor(modelItem => item.category)</h5>
-                                <p class="description text-muted">
+                        <div class="sub-box-content">
+                            <h5>@Html.DisplayFor(modelItem => item.category)</h5>
+                            <p class="description text-muted">
 
-                                    @Html.DisplayFor(modelItem => item.description)
-                                    @Html.DisplayFor(Model => item.userid)
-                                    @Html.DisplayFor(modelItem => item.category)
-                                    @Html.DisplayFor(modelItem => item.User.id)
-                                    @Html.DisplayFor(modelItem => item.User.firstName)
-                                    @Html.DisplayFor(modelItem => item.category)
-                                </p>
-                                @Html.ActionLink("More Information", "Details", new { id = item.id }, new { @class = "infos" })
+                                @Html.DisplayFor(modelItem => item.description)
+                                @Html.DisplayFor(Model => item.userid)
+                                @Html.DisplayFor(modelItem => item.category)
+                                @Html.DisplayFor(modelItem => item.User.id)
+                                @Html.DisplayFor(modelItem => item.User.firstName)
+                                @Html.DisplayFor(modelItem => item.category)
+                            </p>
+                            @Html.ActionLink("More Information", "Details", new { id = item.id }, new { @class = "infos" })
+                            @Html.ActionLink("Complain", "AddComplaint", new { id = item.id }, new { @class = "infos" })
+                            
+                            @if (item.localisation != null)
+                            {
+                                @Html.ActionLink(linkText: "Location", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
+                            }
 
-                                <!-- @Html.ActionLink("Complain", "AddComplaint")-->
-                                @{
-                                    //Html.ActionLink(linkText: "Complainn", actionName: "AddComplaint", controllerName: "Complaints", routeValues: new { id = idlogged }, htmlAttributes: null)
-                                }
-                                @if (item.localisation != null)
-                                {
-                                    @Html.ActionLink(linkText: "Location", actionName: "Index", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
-                                }
-
-                            </div>
+                        </div>
                         </div>
                     </div>
 
