--- a/DariTn/Views/AssetAdvs/MyAdvs.cshtml
+++ b/DariTn/Views/AssetAdvs/MyAdvs.cshtml
@@ -26,7 +26,7 @@
                                 } else if (item.category.Equals("Office")) { 
                                 <img class="img-responsive" src="~/img/selling-img/office.jpg">
                                 }
-                            <div class="sub-box-content">
+                            <div class="sub-box-content" style="height:100px">
                                 <h5>@Html.DisplayFor(modelItem => item.category)</h5>
                                 <p class="description text-muted">
 
@@ -48,7 +48,11 @@
 
                                     @if (item.localisation == null)
                                     {
-                                        @Html.ActionLink(linkText: "Create Localisation", actionName: "Create", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: null)
+                                        @Html.ActionLink(linkText: "Create Localisation", actionName: "Create", controllerName: "Localisations", routeValues: new { id = item.id }, htmlAttributes: new { @class = "infos" })
+                                    }
+                                    @if (item.virtualTour == null)
+                                    {
+                                        @Html.ActionLink(linkText: "Create Virtual Tour", actionName: "Create", controllerName: "VirtualTours", routeValues: new { id = item.id }, htmlAttributes: new { @class = "infos" })
                                     }
                                 </div>
                                         
