--- a/DariTn/Views/Guarantees/Create.cshtml
+++ b/DariTn/Views/Guarantees/Create.cshtml
@@ -4,40 +4,43 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
-{
+<form action="" method="post" enctype="multipart/form-data">
+    {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Guarantee</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.creationDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.guaranteeDocument.ImageCin, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.creationDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.creationDate, "", new { @class = "text-danger" })
+                @Html.TextBox("imageCin", "", new { type = "file" })
+                @Html.ValidationMessageFor(model => model.guaranteeDocument.ImageCin, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.expirationDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.guaranteeDocument.EngagementProof, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.expirationDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBox("engagementProof", "", new { type = "file" })
                 @Html.ValidationMessageFor(model => model.expirationDate, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.guaranteeDocument.ImageJustifPay, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.status)
-                    @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
-                </div>
+                @Html.TextBox("imageJustifPay", "", new { type = "file" })
+                @Html.ValidationMessageFor(model => model.guaranteeDocument.ImageJustifPay, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.guaranteeDocument.PayProof, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBox("payProof", "", new { type = "file" })
+                @Html.ValidationMessageFor(model => model.guaranteeDocument.PayProof, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -47,12 +50,12 @@
             </div>
         </div>
     </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
+</form>
