TimeSlots + virtual tours

--- a/DariTn/Views/TimeSlots/Index.cshtml
+++ b/DariTn/Views/TimeSlots/Index.cshtml
@@ -12,9 +12,6 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.asset.ref)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.date)
         </th>
         <th>
@@ -29,29 +26,25 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.asset.ref)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.hdebut)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.hfin)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.title)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.date)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.hdebut)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.hfin)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.title)
+    </td>
+    <td>
+        @Html.ActionLink("AddRdv", "Edit", new { id = item.id })
+    </td>
+</tr>
+    }
 
 </table>
