--- a/DariTn/Views/AssetAdvs/Details2.cshtml
+++ b/DariTn/Views/AssetAdvs/Details2.cshtml
@@ -1,17 +1,16 @@
 ﻿@model  DariTn.Models.Entities.AssetAdv
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Details2";
 }
 
 <h2>Details</h2>
 <style>
     .boxed {
-        border:groove;
-        border-radius:10px;
+        border: groove;
+        border-radius: 10px;
         border-color: red;
-        margin:50px;
-        
+        margin: 50px;
     }
 </style>
 <div style="height:350px;">
@@ -97,19 +96,26 @@
 
             }
 
-            @Html.ActionLink(linkText: "TimeSlots", actionName: "Index", controllerName: "TimeSlots", routeValues: new { id = Model.id }, htmlAttributes: new { @class = "btn btn-primary btn-lg" })
+          
+                @Html.ActionLink(linkText: "Add TimeSlots", actionName: "Create", controllerName: "TimeSlots", routeValues: new { id = Model.id }, htmlAttributes: new { @class = "btn btn-primary btn-lg" })
+
+            
+            <br />
+                @Html.ActionLink(linkText: "TimeSlots", actionName: "Index2", controllerName: "TimeSlots", routeValues: new { id = Model.id }, htmlAttributes: new { @class = "btn btn-primary btn-lg" })
+
+            
 
         </div>
-      
+
     </div>
-    <div style="float:left;" class="boxed";>
+    <div style="float:left;margin-left:10px;" class="boxed" ;>
 
         @if (Model.localisation != null)
         {
             <style>
                 #map {
-                    height: 370px;
-                    width: 450px;
+                    height: 400px;
+                    width: 600px;
                     border-radius: 2%;
                 }
 
@@ -160,4 +166,4 @@
 
 
 </div>
-       
+
