--- a/DariTn/Views/Localisations/Create.cshtml
+++ b/DariTn/Views/Localisations/Create.cshtml
@@ -41,7 +41,7 @@ function showPosition(position) {
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-    <div class="form-group" id="lat">
+    <div class="form-group">
         @Html.LabelFor(model => model.latitude, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.latitude, new { htmlAttributes = new { @class = "form-control" } })
