--- a/DariTn/Views/TimeSlots/Edit.cshtml
+++ b/DariTn/Views/TimeSlots/Edit.cshtml
@@ -49,10 +49,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.idasset, "idasset", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.asset.id, "idasset", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("idasset", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.idasset, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.idasset, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.asset.id, "", new { @class = "text-danger" })
             </div>
         </div>
 
