--- a/DariTn/Views/VirtualTours/Index.cshtml
+++ b/DariTn/Views/VirtualTours/Index.cshtml
@@ -7,14 +7,13 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Back to Asset", "Index", "AssetAdvs")
 </p>
 
-
-
-<figure>
-    <iframe id="/tours/F_bT4A587K?mls=1" allow="camera;microphone;vr;accelerometer;gyroscope;fullscreen" allowfullscreen frameborder="0" width="100%" height="500" src="@Html.Raw(Model.link)"></iframe>
-</figure>
-
+<div  style="float:left;width:70%">
+    <figure>
+        <iframe id="/tours/F_bT4A587K?mls=1" allow="camera;microphone;vr;accelerometer;gyroscope;fullscreen" allowfullscreen frameborder="0" width="100%" height="500" src="@Html.Raw(Model.link)"></iframe>
+    </figure>
+</div>
 
 
